@@ -1436,6 +1436,300 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|testFieldSetValue
+specifier|public
+name|void
+name|testFieldSetValue
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Field
+name|field
+init|=
+operator|new
+name|Field
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"id1"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|YES
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|UN_TOKENIZED
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"keyword"
+argument_list|,
+literal|"test"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|YES
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|UN_TOKENIZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|RAMDirectory
+name|dir
+init|=
+operator|new
+name|RAMDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|StandardAnalyzer
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|field
+operator|.
+name|setValue
+argument_list|(
+literal|"id2"
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|field
+operator|.
+name|setValue
+argument_list|(
+literal|"id3"
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|Searcher
+name|searcher
+init|=
+operator|new
+name|IndexSearcher
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|Query
+name|query
+init|=
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"keyword"
+argument_list|,
+literal|"test"
+argument_list|)
+argument_list|)
+decl_stmt|;
+comment|// ensure that queries return expected results without DateFilter first
+name|Hits
+name|hits
+init|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|int
+name|result
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|3
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Document
+name|doc2
+init|=
+name|hits
+operator|.
+name|doc
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+name|Field
+name|f
+init|=
+name|doc2
+operator|.
+name|getField
+argument_list|(
+literal|"id"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|f
+operator|.
+name|stringValue
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|"id1"
+argument_list|)
+condition|)
+name|result
+operator||=
+literal|1
+expr_stmt|;
+elseif|else
+if|if
+condition|(
+name|f
+operator|.
+name|stringValue
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|"id2"
+argument_list|)
+condition|)
+name|result
+operator||=
+literal|2
+expr_stmt|;
+elseif|else
+if|if
+condition|(
+name|f
+operator|.
+name|stringValue
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|"id3"
+argument_list|)
+condition|)
+name|result
+operator||=
+literal|4
+expr_stmt|;
+else|else
+name|fail
+argument_list|(
+literal|"unexpected id field"
+argument_list|)
+expr_stmt|;
+block|}
+name|searcher
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"did not see all IDs"
+argument_list|,
+literal|7
+argument_list|,
+name|result
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
